[package]
name = "koda"
version = "0.1.0"
edition = "2021"
description = "CLI to deploy applications to Railway RS"
license = "MIT"
repository = "https://github.com/danieldzansi/railway-rs-cli"
homepage = "https://danieldzansi.me"
keywords = ["deploy", "cli", "devops"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dirs = "6.0.0"
tar = "0.4"
flate2 = "1.1"
walkdir = "2.5"
dunce = "1.0.5"
